<resources>
    <string name="app_name">NewsApp</string>
    <string name="save_menu">Save</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="action_settings">Settings</string>

    <!--Drawer-->
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string name="native_icon_image">native_icon_image</string>
    <string name="native_main_image">native_main_image</string>
    <string name="native_privacy_information_icon_image">Privacy Information Icon image</string>


    <string name="title_activity_settings">Settings</string>

    <string name="logo_note">StartNG Notes</string>
    <string-array name="sports_info">
        <item>Nike Enters 10-Year </item>
        <item>Indonesia Masters – Saina</item>
        <item>College Basketball 2018–19</item>
        <item>Local bowler lands 132 perfect games, shares his secret for success!</item>
        <item>Sierra solos to win at womens Cadel Evans Great Ocean Road Race!</item>
        <item>Tiger Woods Friday live blog:</item>
        <item>The 5km fun run was organised by Ironman</item>
        <item>Soccer insider notes: Liverpool not the only Premier League club eyeing Weston McKennie!</item>
        <item>Chloe Grimme, a USA Swimming Scholastic All American 1!</item>
        <item>Table Tennis Federation Revokes Soumyajit Ghoshs Suspension, 9 Months After Rape Allegations!</item>
        <item>2019 Australian Open odds, predictions for mens finals!</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="noAccount">Don\'t have an account yet? Sign Up</string>
    <string name="login_with">Login with</string>
    <string name="haveAccount">Already have an account? Login</string>
    <string name="todo">TODO</string>
    <string name="label">Please fill the feilds provided</string>
    <string name="full_name">FULL NAME</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="or">OR</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="email">EMAIL</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="local">Local</string>
    <string name="all_notes">All notes</string>
    <string name="favourites">Favourites</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="filter">Filter</string>
    <string name="user">User</string>
    <string name="delete">Delete</string>
    <string name="Open">open</string>
    <string name="Close">Close</string>
    <string name="new_note">New note</string>
    <string name="log_out">Log Out</string>
    <string name="share">Share with Friends</string>
</resources>
