<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/save"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_filter"
        android:orderInCategory="100"
        android:title="@string/filter"
        android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="collapseActionView" />

</menu>
